# TUIFIManager

./: .gitattributes  .gitignore  .scrutinizer.yml  .sourcery.yaml  CHANGELOG.md  README.md  flake.nix  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: nox_ci.yml
TUIFIManager/: TUIFIProfile.py  TUIFile.py  TUIMenu.py  TUIProps.py  TUISynthXDND.py  TUItilities.py  __init__.py  __main__.py  file.py  file_manager.py  menu.py  settings.py  ui_component.py  utils.py
etc/: tuifi_cd.sh  tuifi_cd_on_esc_termux.sh
