
[metadata]
name = TUIFIManager
version = 5.0.5
description = A cross-platform terminal-based termux-oriented file manager
long_description = file: docs/README.md
long_description_content_type = text/markdown
author = George Chousos
author_email = gxousos@gmail.com
keywords = file-manager, terminal, tui, ncurses, pdcurses, uni-curses, termux, vim, vim-motions, cross-platform
license = GPL-3.0
license_file = LICENSE
platform = unix, linux, osx, cygwin, windows
url = https://github.com/GiorgosXou/TUIFIManager
project_urls =
    Github=https://github.com/GiorgosXou/TUIFIManager
classifiers =
    Environment :: Terminals
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
include_package_data = True
packages =
    TUIFIManager
python_requires = >=3.8
install_requires =
    Uni-Curses >= 3.1.2
    Send2Trash == 1.8.0

[options.entry_points]
console_scripts =
    tuifi = TUIFIManager.__main__:main
